assets/css/styles.css
/* ... */
.contact__description {
  max-width: 600px;
  margin: 0 auto;

  font-size: clamp(0.9rem, 4vw, 1rem);
}

.contact__methods {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  justify-content: center;
}

.contact__method {
  min-width: 200px;

  text-align: center;
}

.contact__method-title {
  margin: 0;

  font-size: clamp(0.92rem, 4vw, 1.125rem);
  color: var(--color-dark);
}

.contact__link {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.1rem;

  padding: 0.5rem 0.75rem;
  background-color: var(--color-light);

  border-radius: var(--radius-lg);
  box-shadow: var(--shadow-md);

  font-weight: 800;
  font-size: clamp(0.9rem, 4vw, 1rem);

  transition: box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

@media (min-width: 768px) {
  .contact__link {
    gap: 0.5rem;
    padding: 1.25rem 1.5rem;
  }
}

.contact__link:hover {
  text-decoration: none;

  box-shadow: var(--shadow-xl);

  animation: float 2s ease-in-out infinite;
}

.contact__link:hover span {
  text-decoration: underline double;
  text-underline-offset: 4px;
}

.contact__form {
  margin: 0 auto;
}

.contact__fieldset {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.8rem;

  padding: 0.25rem 1.5rem 1.5rem;

  border: 2px solid var(--color-light);
  border-radius: var(--radius-lg);

  animation: pulse-shadow-double 2s ease infinite;
}

@media (min-width: 768px) {
  .contact__fieldset {
    padding: 0.5rem 2rem 2rem;
  }
}

.contact__legend {
  font-weight: 600;
  font-size: 1.2rem;
  text-shadow: 2px 2px 4px var(--color-dark);
}

/* FORM CONTACT */

.form__inputs {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.form__item {
  flex: 1 1 auto;

  display: flex;
  flex-direction: column;
}

.form__area {
  height: 100%;
}

.form__label {
  text-align: start;
  font-weight: 700;
  text-shadow: 1px 1px 1px var(--color-dark);
}

.form__input {
  padding: 0.3rem;

  border: 1px solid transparent;
  border-radius: var(--radius-sm);
  box-shadow: var(--shadow-xl);
}

.form__actions {
  flex: 1 1 auto;
  align-self: center;

  padding: 0 clamp(0rem, 10rem - 23vw, 2.5rem);
}

@media (min-width: 768px) {
  .form__actions {
    padding: 1rem 0 0;
  }
}

.form__actions .button {
  margin: 0;
  max-height: 44px;

  border: none;
}

/* =============================================================================
   FOOTER
   ============================================================================= */

.footer {
  padding: 1rem 0;
  background: var(--gd-footer);

  color: var(--color-light);
  text-align: center;

  animation: slideInFromBottom 0.8s ease-out;
}

.footer__container {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;

  padding: 0 1.25rem;
}

.footer__nav {
  margin-top: 0.6rem;
}

.footer__list {
  display: flex;
  flex-direction: column;
  align-items: center;

  margin-block: 0;
}

@media (min-width: 480px) {
  .footer__list {
    flex-direction: row;
    justify-content: center;
  }
}

@media (min-width: 768px) {
  .footer__list {
    gap: 1rem;
  }
}

.footer__link {
  flex: 1;

  max-width: 120px;
  min-height: 44px;
  padding: 0.5rem 1rem;

  color: var(--color-light);

  border: 1px solid transparent;

  transition: transform 0.2s ease;
}

@media (min-width: 480px) {
  .footer__link {
    padding: 0.5rem;
  }
}

.footer__link:hover {
  text-decoration: none;
  color: var(--color-light);

  border: 1px solid var(--color-light);
  border-radius: var(--radius-sm);

  transform: translateY(-2px);
}

.footer__contact {
  display: flex;
  justify-content: center;

  margin: 0;
}

.network__link {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 44px;
  height: 44px;

  border-radius: var(--radius-md);

  transition: background-color 0.2s ease 0.1s;
}

.network__link:hover {
  background-color: var(--color-light);
}

.footer__networks:hover .icon-gmail {
  background-color: var(--color-gmail);
}

.footer__networks:hover .icon-linkedin {
  background-color: var(--color-linkedin);
}

.footer__networks:hover .icon-github {
  background-color: var(--color-github);
}

.footer__copyright {
  margin: 0;

  font-size: clamp(0.9rem, 4vw, 1rem);
  color: var(--color-light-shadow);
}

/* =============================================================================
/* MICRO-INTERACCIONES
   ============================================================================= */

/* Focus con animación */

a:focus-visible,
button:focus-visible,
.button:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 2px;
  animation: focusPulse 1.5s infinite;
}

/* Enlaces con scale */
a:active {
  transform: scale(0.98);
}

/* Imágenes con zoom suave */

img {
  transition: transform 0.3s ease;
}

img:hover {
  transform: scale(1.05);
}

/* figcaption oculto */

figure {
  position: relative;
  overflow: hidden;
}

figcaption {
  position: absolute;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  width: 100%;
  transform: translateY(150%);
  transition: transform 0.3s ease 0.1s;
}

figure:hover figcaption {
  transform: translateY(0);
}

/* BOTON VOLVER ARRIBA */

.back-to-top-wrapper::before {
  content: "";
  position: absolute;
  inset: 0;
  z-index: -1;

  border-radius: var(--radius-lg);
  background-color: var(--color-primary);
  animation: back-to-top-pulso 2.5s ease-out infinite;
}

.back-to-top-wrapper {
  position: fixed;
  right: 2rem;
  bottom: 2rem;

  display: flex;

  width: 44px;
  height: 44px;

  border-radius: var(--radius-lg);
  box-shadow: 0 0 8px 2px var(--color-primary-shadow);

  opacity: 0;
  transform: translateY(12px);
  cursor: pointer;
  pointer-events: none;

  transition:
    opacity 0.4s ease,
    transform 0.4s ease,
    box-shadow 0.3s ease,
    color 0.3s ease;
}

.back-to-top-wrapper:hover {
  color: var(--color-light);

  box-shadow: 0 0 12px 4px var(--color-primary-shadow);

  transform: translateY(-9px);
}
/* ... */

